--- a/app/src/main/res/layout/fragment_classroom2_idle.xml
+++ b/app/src/main/res/layout/fragment_classroom2_idle.xml
@@ -3,6 +3,19 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent">
 
+
+    <FrameLayout
+        android:id="@+id/layout_idle_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+    <ImageView
+        android:id="@+id/iv_whiteboard_preview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="fitXY"
+        />
+
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
