--- a/app/src/main/res/layout/fragment_classroom2_play.xml
+++ b/app/src/main/res/layout/fragment_classroom2_play.xml
@@ -3,10 +3,17 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
+    <FrameLayout
+        android:id="@+id/layout_idle_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
+
     <com.pili.pldroid.player.widget.PLVideoTextureView
             android:id="@+id/video_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+        android:visibility="gone"
             />
 
     <LinearLayout
