--- a/app/src/main/res/layout/fragment_classroom2_idle.xml
+++ b/app/src/main/res/layout/fragment_classroom2_idle.xml
@@ -16,6 +16,17 @@
         android:scaleType="fitXY"
         />
 
+    <android.support.v7.widget.RecyclerView
+            android:id="@+id/chat_list"
+            android:layout_width="@dimen/px300"
+            android:layout_height="match_parent"
+            android:scrollbars="none"
+            android:layout_marginTop="@dimen/px281"
+            android:layout_marginBottom="@dimen/px124"
+            android:layout_marginLeft="@dimen/px30"
+            />
+
+
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
