白板管理页面

--- a/app/src/main/res/layout/fragment_classroom_board_collaborate.xml
+++ b/app/src/main/res/layout/fragment_classroom_board_collaborate.xml
@@ -107,4 +107,9 @@
 
     </LinearLayout>
 
+    <FrameLayout
+        android:id="@+id/layout_dialog_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
 </RelativeLayout>
