Signed-off-by: Maxb <maxb@jyzblm.com>

--- a/app/src/main/res/layout/fragment_classroom2_living.xml
+++ b/app/src/main/res/layout/fragment_classroom2_living.xml
@@ -3,8 +3,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-    <cn.xiaojs.xma.ui.classroom2.widget.CameraPreviewFrameView
-            android:id="@+id/camera_preview"
+    <cn.xiaojs.xma.ui.classroom2.live.VideoStreamView
+            android:id="@+id/videostream_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
@@ -18,38 +18,17 @@
             android:layout_marginLeft="@dimen/px30"
             />
 
-    <FrameLayout
-            android:id="@+id/video_root"
+
+    <cn.xiaojs.xma.ui.classroom2.live.PlayLiveView
+            android:id="@+id/video_play"
             android:layout_width="@dimen/px285"
             android:layout_height="@dimen/px160"
             android:layout_marginLeft="@dimen/px30"
             android:layout_marginBottom="@dimen/px125"
             android:layout_alignParentBottom="true"
             android:layout_above="@id/chat_list"
-            android:visibility="gone">
-
-        <com.pili.pldroid.player.widget.PLVideoTextureView
-                android:id="@+id/video_play"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                />
-
-        <View
-                android:id="@+id/overlay_mask"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                />
-        <ImageView
-                android:id="@+id/close_video"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/white_opacity_35"
-                android:scaleType="centerInside"
-                android:src="@drawable/ic_class_videoshutdown"
-                android:visibility="gone"/>
-
-
-    </FrameLayout>
+            android:visibility="gone"
+            />
 
     <include
             layout="@layout/layout_classroom2_control_port"
