--- a/app/src/main/res/layout/activity_classroom2.xml
+++ b/app/src/main/res/layout/activity_classroom2.xml
@@ -25,4 +25,10 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
+
+    <include
+            layout="@layout/layout_classroom2_one2one_confirm"
+            android:visibility="gone"
+            />
+
 </android.support.constraint.ConstraintLayout>
