--- a/app/src/main/res/layout/fragment_classroom2_database.xml
+++ b/app/src/main/res/layout/fragment_classroom2_database.xml
@@ -5,6 +5,7 @@
                 android:layout_height="match_parent">
 
     <android.support.constraint.ConstraintLayout
+            android:id="@+id/cl_root"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="@dimen/px88"
