--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -144,6 +144,7 @@
     <!-- 暗绿色 -->
 
     <color name="blue">#0000FF</color>
+    <color name="blue1">#0176FF</color>
     <color name="subject_selected_blue">#7598c1</color>
     <color name="radio_tips">#b49e89</color>
 
