--- a/app/src/main/res/layout/layout_classroom2_control_port.xml
+++ b/app/src/main/res/layout/layout_classroom2_control_port.xml
@@ -95,6 +95,15 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             />
+    
+    <ImageView
+            android:id="@+id/p_bottom_avator"
+            android:layout_width="@dimen/px50"
+            android:layout_height="@dimen/px50"
+            app:layout_constraintLeft_toLeftOf="@id/left_guideline"
+            app:layout_constraintTop_toTopOf="@id/bottom_guideline"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:visibility="gone"/>
 
     <TextView
             android:id="@+id/p_bottom_class_name"
@@ -103,9 +112,10 @@
             android:textColor="@color/font_class_name"
             android:textSize="@dimen/font_30px"
             android:layout_marginRight="@dimen/px10"
+            android:layout_marginLeft="@dimen/px21"
             app:layout_constraintTop_toTopOf="@id/bottom_guideline"
             app:layout_constraintRight_toLeftOf="@id/p_bottom_orient"
-            app:layout_constraintLeft_toLeftOf="@id/left_guideline"
+            app:layout_constraintLeft_toRightOf="@id/p_bottom_avator"
             app:layout_constraintBottom_toBottomOf="parent"
             />
 
