--- a/app/src/main/res/layout/fragment_classroom2_play.xml
+++ b/app/src/main/res/layout/fragment_classroom2_play.xml
@@ -14,6 +14,12 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
+    <View
+            android:id="@+id/control_click"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
+
     <android.support.v7.widget.RecyclerView
             android:id="@+id/chat_list"
             android:layout_width="@dimen/px300"
