--- a/app/src/main/res/layout/fragment_classroom2_schedule.xml
+++ b/app/src/main/res/layout/fragment_classroom2_schedule.xml
@@ -5,17 +5,33 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
     <android.support.constraint.ConstraintLayout
         android:id="@+id/cl_root"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="@dimen/px88"
         android:layout_alignParentTop="true"
-        android:background="@drawable/bottomsheet_bg_white_rect">
+        android:background="@drawable/bottomsheet_bg_white_rect"
+        >
 
 
+  <!--      <FrameLayout
+            android:id="@+id/root"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            />-->
+        
+        <FrameLayout
+            android:id="@+id/layout_container"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            />
 
-       
 
     </android.support.constraint.ConstraintLayout>
 
