--- a/app/src/main/res/layout/fragment_video_exoplayer.xml
+++ b/app/src/main/res/layout/fragment_video_exoplayer.xml
@@ -13,6 +13,12 @@
             android:visibility="gone"
             />
 
+    <FrameLayout
+            android:id="@+id/layout_idle_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone"/>
+
     <com.google.android.exoplayer2.ui.SimpleExoPlayerView
             android:id="@+id/player_view"
             android:layout_width="match_parent"
@@ -36,7 +42,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            style="@android:style/Widget.Holo.ProgressBar.Large"/>
+            style="@android:style/Widget.Holo.ProgressBar.Large"
+            android:visibility="gone"/>
 
     <android.support.v7.widget.RecyclerView
             android:id="@+id/chat_list"
