--- a/app/src/main/res/color/selector_btn_orange_black.xml
+++ b/app/src/main/res/color/selector_btn_orange_black.xml
@@ -2,6 +2,6 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:color="@color/main_orange" android:state_checked="true"></item>
-    <item android:color="@color/font_black" android:state_checked="false"></item>
+    <item android:color="@color/hint_color" android:state_checked="false"></item>
 
 </selector>
