Signed-off-by: Maxb <maxb@jyzblm.com>

--- a/app/src/main/res/layout/layout_base2_recyclerview_loadmore.xml
+++ b/app/src/main/res/layout/layout_base2_recyclerview_loadmore.xml
@@ -4,16 +4,17 @@
         xmlns:loading="http://schemas.android.com/apk/res-auto"
         android:id="@+id/loading_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/black_opacity_40"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
         android:layout_gravity="center"
-        android:visibility="gone"
+        android:minHeight="@dimen/px2"
         >
-
     <cn.xiaojs.xma.ui.widget.LoadingView
             android:id="@+id/loading_progress"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
+            android:paddingTop="@dimen/px30"
+            android:paddingBottom="@dimen/px30"
             loading:lsize="@dimen/px60"/>
 </RelativeLayout>
