--- a/app/src/main/res/layout/fragment_classroom2_schedule.xml
+++ b/app/src/main/res/layout/fragment_classroom2_schedule.xml
@@ -1,38 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
-    <android.support.constraint.ConstraintLayout
+    <RelativeLayout
         android:id="@+id/cl_root"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="@dimen/px88"
         android:layout_alignParentTop="true"
-        android:background="@drawable/bottomsheet_bg_white_rect"
-        >
+        android:background="@drawable/bottomsheet_bg_white_rect">
 
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/px88"
+            android:layout_centerHorizontal="true"
+            android:text="课表"
+            android:textSize="@dimen/px32"
+            android:gravity="center"
+            android:textColor="@color/classroom_dark_gray"
+            />
 
-  <!--      <FrameLayout
-            android:id="@+id/root"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            />-->
-        
-        <FrameLayout
-            android:id="@+id/layout_container"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
+        <ImageView
+            android:id="@+id/add_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_class_add_1"
+            android:layout_marginRight="@dimen/px22"
+            android:layout_alignParentRight="true"
+            android:padding="@dimen/px10"
+            android:layout_marginTop="@dimen/px15"
+            />
+
+        <View
+            android:id="@+id/v_divider"
+            style="@style/DividerHorizontal"
+            android:layout_below="@+id/title"
             />
 
 
-    </android.support.constraint.ConstraintLayout>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/v_divider"
+            />
+
+        <FrameLayout
+            android:id="@+id/load_state_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/v_divider"
+            />
+
+    </RelativeLayout>
+
+
 
 </RelativeLayout>
